# xf86-video-freedreno

./: .gitignore  NEWS  configure.ac
man/: .gitignore  freedreno.man
src/: Makefile.am  drmmode_display.c  fbmode_display.c  freedreno_z1xx.h  msm-accel.c  msm-accel.h  msm-cursor.c  msm-display.c  msm-dri2.c  msm-driver.c  msm-drm.c  msm-drm.h  msm-exa-xa.c  msm-exa.c  msm-output.c  msm-pixmap.c  msm.h
